--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -4,7 +4,7 @@
 			<!-- Mobile-menu start -->
 		
 			<!-- Mobile-menu end -->
-				<div class="main">
+				<div class="main search">
 				<!-- SLIDER-BANNER-AREA START -->
 				<section class="slider-banner-area clearfix">
 					<!-- Sidebar-social-media start -->
@@ -102,27 +102,7 @@
 				</section>
 				<!-- End Slider-section -->
 				<!-- sidebar-search Start -->
-				<div class="sidebar-search animated slideOutUp">
-					<div class="table">
-						<div class="table-cell">
-							<div class="container">
-								<div class="row">
-									<div class="col-md-8 offset-md-2 p-0">
-										<div class="search-form-wrap">
-											<button class="close-search"><i class="zmdi zmdi-close"></i></button>
-											<form action="#">
-												<input type="text" placeholder="Search here..." />
-												<button class="search-button" type="submit">
-													<i class="zmdi zmdi-search"></i>
-												</button>
-											</form>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
+			
 				<!-- sidebar-search End -->
 				<!-- PRODUCT-AREA START -->
 				<div class="product-area pt-80 pb-35">
@@ -416,6 +396,9 @@
 							.catch(error => console.error('Error fetching shop data:', error));
 			
 				}
+
+	
+		
 		</script>
 	</body>
 
@@ -451,4 +434,6 @@
     .hamburger--emphatic {
         display: none !important;
     }
+
+		
 </style>
